@startuml diagrama-clases

title Diagrama de Clases — Sistema de Intercambio de Comisiones

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

class Usuario {
    -id_usuario: Int
    -dni: Int
    -nombre_usuario: String
    -apellido_usuario: String
    -correo: String
    -activo: Boolean
    -fecha_registro: Date
    +obtenerPorDni(dni: Int)
}

class Estudiante {
    +obtenerEstudiante(idUsuario: Int)
    +obtenerEstudiantes(paginacion)
    +buscar(q: String, idUsuarioActual: Int, idComision?: Int)
    +obtenerComisiones(idUsuario: Int)
}

class Profesor {
    +obtenerComisiones(idUsuario: Int)
    +obtenerComision(idUsuario: Int)
}

class Comision {
    -id_comision: Int
    -numero_comision: Int
    -nombre_comision: String
    -cupo_maximo: Int
    -fecha_fin: Date
    +obtenerTodas(paginacion)
    +obtenerDetalleComision(idComision: Int)
    +obtenerComisionesDeUsuario(idUsuario: Int)
    +agregarEstudiante(idComision: Int, idEstudiante: Int)
    +darBajaEstudiante(idComision: Int, idUsuario: Int)
    +trasladarEstudiante(idComisionDestino: Int, idUsuario: Int)
    +agregarHorario(idComision: Int, hora_inicio: String, hora_fin: String, nombre_dia: String, nombre_modalidad: String, formato: FormatoClase, nombre_aula: String)
    +eliminarHorario(idComision: Int, idHorario: Int)
    +reactivarHorario(idComision: Int, idHorario: Int)
    +agregarEvento(idComision: Int, titulo: String, tipo_evento: TipoEvento, fecha_inicio: String, fecha_fin: String, origen: OrigenEvento, id_usuario: Int, id_materia: Int)
    +modificarEvento(idComision: Int, idEvento: Int, titulo?: String, tipo_evento?: TipoEvento, fecha_inicio?: String, fecha_fin?: String, origen?: OrigenEvento, id_usuario?: Int, id_materia?: Int)
    +eliminarEvento(idComision: Int, idEvento: Int)
    +reactivarEvento(idComision: Int, idEvento: Int)
}

class Intercambio {
    -id_intercambio: Int
    -fecha_solicitud: Date
    -estado: String
    +obtenerPorUsuario(idUsuario: Int)
    +obtenerPorId(idIntercambio: Int)
    +obtenerCandidatos(id_comision_origen: Int, id_usuario_solicitante: Int)
    +crearIntercambio(id_usuario_ofrece: Int, id_comision_ofrece: Int, id_usuario_destino: Int, id_comision_destino: Int)
    +completar(idIntercambio: Int)
}

class Comprobante {
    -id_comprobante: Int
    -archivo_pdf_url: String
    -fecha_generacion: Date
    +crearComprobante(idIntercambio: Int, archivoPdfUrl: String)
    +generarPdf(datosComprobante)
    +subirPdf(idIntercambio: Int, pdf: Buffer)
}

class Notificacion {
    -id_notificacion: Int
    -tipo: TipoNotificacion
    -titulo: String
    -mensaje: String
    -leida: Boolean
    -creada_en: Date
    +crearNotificacion(id_usuario: Int, tipo: String, titulo: String, mensaje: String)
    +obtenerPorUsuario(idUsuario: Int)
    +marcarSoloLeida(idNotificacion: Int, idUsuario: Int)
    +marcarTodasLeidas(idUsuario: Int)
}

class Mensaje {
    -contenido: String
    -creado_en: Date
    +crearConversacion(id_usuario_1: Int, id_usuario_2: Int)
    +obtenerConversacion(idConversacion: Int)
    +obtenerMisConversaciones(supabaseAuthId: String, paginacion)
    +marcarLeido(idConversacion: Int, idUsuario: Int)
    +obtenerMensajes(idConversacion: Int)
    +enviarMensaje(id_conversacion: Int, id_usuario_emisor: Int, contenido: String)
}

class Tarea {
    -id_tarea: Int
    -titulo: String
    -descripcion: String
    -prioridad: Prioridad
    -fecha_vencimiento: Date
    +obtenerPorUsuario(idUsuario: Int)
    +crearTarea(idUsuario: Int, titulo: String, estado: String, prioridad: String, descripcion?: String, estimacion_min?: Int, id_materia?: Int, id_evento?: Int, fecha_vencimiento?: String)
    +moverAColumna(idTarea: Int, estado: String, idUsuario: Int)
    +eliminarTarea(idTarea: Int, idUsuario: Int)
}

class ColumnaTablero {
    -id_columna: Int
    -nombre: String
    -orden_columna: Int
    +obtenerParaUsuario(idUsuario: Int)
    +crearColumna(idUsuario: Int, nombre: String)
    +eliminarColumna(idColumna: Int, idUsuario: Int)
}

package "Observer Pattern — IntercambioCompletado" #E3F2FD {

    interface IIntercambioObserver <<Observer>> {
        +failureMode: ObserverFailureMode
        +onIntercambioCompletado(evento): ObserverResultado | void
    }

    class IntercambioCompletadoSubject <<Subject>> {
        -observers: IIntercambioObserver[]
        +registrarObserver(observer: IIntercambioObserver)
        +notificar(evento): NotificarResultado
    }

    class ComprobanteObserver <<critical>> {
        -comprobantePdf: ComprobantePdfService
        -comprobantesStorage: ComprobantesStorageService
        -comprobantesRepository: ComprobantesRepository
        +onIntercambioCompletado(evento): ObserverResultado
    }

    class NotificacionObserver <<best-effort>> {
        -notificacionesRepository: NotificacionesRepository
        +onIntercambioCompletado(evento): void
    }

    class EmailObserver <<best-effort>> {
        -email: EmailService
        -comprobantePdf: ComprobantePdfService
        +onIntercambioCompletado(evento): void
    }

}

' Herencia — especialización de roles
Estudiante --|> Usuario
Profesor --|> Usuario

' Relaciones de dominio
Profesor "1" --> "*" Comision : enseña
Estudiante "*" --> "*" Comision : inscripto en
Comision "*" --> "*" Intercambio : involucrada en
Intercambio "1" --> "0..1" Comprobante : genera
Estudiante "1" --> "*" Intercambio : solicita
Usuario "1" --> "*" Notificacion : recibe
Usuario "1" --> "*" Mensaje : participa en conversacion
Estudiante "1" --> "*" Tarea : tiene
Estudiante "1" --> "*" ColumnaTablero : organiza
ColumnaTablero "1" --> "*" Tarea : contiene

' Relaciones Observer Pattern
IIntercambioObserver <|.. ComprobanteObserver : implements
IIntercambioObserver <|.. NotificacionObserver : implements
IIntercambioObserver <|.. EmailObserver : implements
IntercambioCompletadoSubject "1" o-- "*" IIntercambioObserver : observers

' Conexión observers — dominio
ComprobanteObserver ..> Comprobante : persiste
NotificacionObserver ..> Notificacion : crea

@enduml
